scribble-test/src/test/resources/good/efsm/gcontinue/choiceunguarded/Test05a.scr
module good.efsm.gcontinue.choiceunguarded.Test05a;


global protocol Proto1(role A, role B, role C)
{
	rec X
	{
		1() from A to B;
		2() from B to C;
		choice at C
		{
			3() from C to A;
			continue X;  // Projected as recursive non-det choice for B
		}
		or
		{
			4() from C to A;
			continue X;
		}
	}
}


